# simplerenderer

./: CMakeLists.txt  README.md  a.out  framebuffer.tga  framebuffer_gray.tga  framebuffer_tangent.tga  framebuffer_toon.tga  geometry.h  graphics_library.cpp  graphics_library.h  main.cpp  main.cu  main_old.txt  mask.tga  matrix.h  model.cpp  model.h  notes.txt  object_handler.cpp  object_handler.h  renderer  shadow.tga  shadowmap.tga  test_geometry.cpp  test_math  tgaimage.h  zbuffer.tga  zbuffer1.tga  zbuffer2.tga  zbuffer_camera.tga  zbuffer_shadow.tga
cpu/: README.md  main.cpp
cpu/graphics_library/: graphics_library.h  model.h
cpu/math/: test_geometry.cpp  vector.h
cpu/shaders/: grayscale_shader.h  shader.h  tangent_texture_shader.cpp  tangent_texture_shader.h
cuda_gpu/: .git_ignore  .gitignore  README.md  main.cu
cuda_gpu/graphics_library/: model.h  tgaimage.cpp
cuda_gpu/math_lib/: vector.h
cuda_gpu/shaders/: gpu_shader.cu
graphics_library/: gpu_material.cu  gpu_material.h  graphics_library.cu  graphics_library.h  model.cpp  tgaimage.h
math_lib/: gpu_math.h  matrix.h  test_math
shaders/: grayscale_shader.cpp  shader.h  toon_shader.cpp  toon_shader.h
